--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -1,4 +1,36 @@
 html {
   background-color: black;
   text-align: center;
+  font-family: Verdana;
+}
+
+h1 {
+  font-weight: normal;
+  font-size: 50px;
+  color: white;
+}
+
+a {
+  color: aquamarine;
+  font-size: 16px;
+}
+
+footer p {
+  text-align: right;
+  color: gray;
+}
+
+h2, h3 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+
+img {
+  padding: 10px;
+}
+
+#travel p {
+  color: gray;
+  font-size: 21px;
 }
